[package]
name = "rusty_fuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
url = "2.2.2"
reqwest = {version = "0.11.9"}
term-table = "1.3.2"
tokio = { version = "1", features = ["full"] }
