[package]
name = "rustyfuzz"
version = "0.1.0"
edition = "2021"
authors = ["maikroservice <maikroservice@gmail.com>"]
license = "MIT"
repository = "https://github.com/pwnandprotect/rustyfuzz"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
url = "2.2.2"
reqwest = { version = "0.11.9" }
term-table = "1.3.2"
tokio = { version = "1", features = ["full"] }
indicatif = "0.16.2"
#rustyfuzz_lib = "1.0.0"
