[package]
name = "rustyfuzz_lib"
version = "1.0.0"
edition = "2021"
authors = ["maikroservice <maikroservice@gmail.com>"]
description = "high performance forced directory browser utility library."
readme = "README.md"
license = "MIT"
repository = "https://github.com/pwnandprotect/rustyfuzz"

[lib]
name = "rustyfuzz_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr = "0.15.3"
